# google-calendar-countdown-bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml
core/bot/: config.py
core/bot/handlers/: calendar.py  start.py
core/bot/keyboards/: calendar_keyboard.py
core/bot/language/: language_ru.py
core/bot/services/: google_calendar.py
